[package]
name = "rust-axum-jwtauth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.7.3", features = [
  "runtime-async-std-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
